// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. default layout 1`] = `
.c0 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

<div>
  <div>
    <img
      alt=""
      src="http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1000"
    />
    <Gradient
      degrees={264}
      height={null}
      width={null}
    />
  </div>
</div>
`;

exports[`2. default layout without uri 1`] = `
.c0 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

<div>
  <div>
    <img
      alt=""
      src={null}
    />
    <Gradient
      degrees={264}
      height={null}
      width={null}
    />
  </div>
</div>
`;

exports[`3. an invalid uri 1`] = `
.c0 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

<div>
  <div>
    <img
      alt=""
      src="not-valid"
    />
    <Gradient
      degrees={264}
      height={null}
      width={null}
    />
  </div>
</div>
`;

exports[`4. no url in environment 1`] = `
.c0 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

<div>
  <div>
    <img
      alt=""
      src="not-valid?resize=1400"
    />
    <Gradient
      degrees={264}
      height={null}
      width={null}
    />
  </div>
</div>
`;

exports[`5. with existing url params 1`] = `
.c0 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

<div>
  <div>
    <img
      alt=""
      src="https://image.io?resize=1400"
    />
    <Gradient
      degrees={264}
      height={null}
      width={null}
    />
  </div>
</div>
`;

exports[`6. remove the low res image after the high res image has transitioned in 1`] = `
.c1 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 1;
}

.c0 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

<div>
  <div>
    <img
      alt=""
      src="https://image.io?resize=1400"
    />
    <img
      alt=""
      src="https://image.io?resize=200"
    />
  </div>
</div>
`;

exports[`6. remove the low res image after the high res image has transitioned in 2`] = `
.c0 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

<div>
  <div>
    <img
      alt=""
      src="https://image.io?resize=1400"
    />
  </div>
</div>
`;

exports[`7. only a low res image 1`] = `
.c0 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 1;
}

<div>
  <div>
    <img
      alt=""
      src="https://image.io?resize=200"
    />
    <Gradient
      degrees={264}
      height={null}
      width={null}
    />
  </div>
</div>
`;

exports[`8. fade in the low res image 1`] = `
.c0 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 1;
}

<div>
  <div>
    <img
      alt=""
      src="https://image.io?resize=200"
    />
    <Gradient
      degrees={264}
      height={null}
      width={null}
    />
  </div>
</div>
`;

exports[`8. fade in the low res image 2`] = `
.c0 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 1;
}

<div>
  <div>
    <img
      alt=""
      src="https://image.io?resize=200"
    />
  </div>
</div>
`;

exports[`9. both high and low res sizes 1`] = `
.c0 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

.c1 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 1;
}

<div>
  <div>
    <img
      alt=""
      src="https://image.io?resize=900"
    />
    <img
      alt=""
      src="https://image.io?resize=200"
    />
    <Gradient
      degrees={264}
      height={null}
      width={null}
    />
  </div>
</div>
`;
